--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/cordellr/express-demo#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^14.3.1"
+    "helmet": "^3.18.0",
+    "joi": "^14.3.1",
+    "morgan": "^1.9.1"
   }
 }
