--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cordellr/express-demo#readme",
   "dependencies": {
+    "config": "^3.1.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "joi": "^14.3.1",
