--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/cordellr/express-demo#readme",
   "dependencies": {
     "config": "^3.1.0",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "joi": "^14.3.1",
